# PlumOS

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  Makefile  PLUMOS  PLUMOS_PC_AMD64  PLUMOS_X_ARM64  README.md  boot.txt  packages.txt  plum.config  plumos_full_source.txt  sdk.txt
GUI_PlumOS/: CMakeLists.txt  CMakePresets.json  simple_gui.cpp
GUI_PlumOS/dependencies/SDL2/lib/arm64/: SDL2.lib  SDL2main.lib  SDL2test.lib
GUI_PlumOS/dependencies/SDL2/lib/x64/: SDL2_test.lib  SDL2main.lib
GUI_PlumOS/src/: FileSystem.cpp  main.cpp
PLuMos/: PlumOS.vbox  PlumOS.vbox-prev
PLuMos/Core/: PLUMOS_PC  PLUMOS_PC_AMD64  PLUMOS_PC_ARM64  PLUMOS_PHONE_ARM64
PLuMos/Logs/: VBox.log.1
boot/: Cargo.toml  config.toml
boot/src/: main.rs  utils.rs
boot/src/arch/: arch_aarch64.rs  arch_riscv64.rs
boot/src/boot/: chainload.rs  entry.rs  loader.rs  mod.rs
boot/src/config/: parser.rs  strings.rs
boot/src/fs/: ext2.rs  fat.rs  filesystem.rs  gpt_mbr.rs
boot/src/health/: checker.rs
boot/src/net/: ntp.rs
boot/src/tui/: logo.rs  menu.rs  panic.rs  screen.rs
bootloader/: Cargo.toml  Makefile  build.rs
bootloader/.cargo/: config.toml
bootloader/arch/aarch64/: mmio.c
bootloader/arch/aarch64/boot/baremetal/: start.S
bootloader/arch/aarch64/boot/uefi/: entry.S
bootloader/arch/riscv64/: clint.c
bootloader/arch/riscv64/boot/: start.S
bootloader/arch/x86_64/: gdt.S  idt.S
bootloader/arch/x86_64/boot/bios/: mbr.S  stage2.c
bootloader/arch/x86_64/boot/uefi/: entry.c
bootloader/config/: boot.cfg
bootloader/linkers/: aarch64.ld  prum64.ld  riscv64.ld  x86_64-bios.ld  x86_64-uefi.ld
bootloader/src/: features.rs  main.rs
bootloader/src/alloc/: early_alloc.rs
bootloader/src/api/: panic_handler.rs
bootloader/src/arch/: mod.rs
bootloader/src/arch/aarch64/: mod.rs
bootloader/src/arch/riscv64/: mod.rs
bootloader/src/arch/x86_64/: mod.rs
bootloader/src/boot/: baremetal.rs  chain.rs  mod.rs
bootloader/src/boot/protocols/: mod.rs  multiboot2.rs  ofw.rs  uefi.rs
bootloader/src/fs/: apfs.rs  btrfs.rs  ext4.rs  fat32.rs  iso9660.rs  mod.rs  pfs.rs
bootloader/src/lang/: en.rs  mod.rs  ru.rs
bootloader/src/secure/: mod.rs  rsa.rs  sb.rs  sha256.rs
bootloader/src/security/: mod.rs
bootloader/src/time/: mod.rs  ntp.rs  rtc.rs
bootloader/src/ui/: mod.rs
bootloader/src/ui/gfx/: fb.rs
bootloader/src/ui/tui/: menu.rs  mod.rs  theme.rs
bootloader/targets/: aarch64-unknown-kernel.json  prum64-unknown-kernel.json
docs/: LICENSE  README.md  README_bootloader.md  folder_structure
drivers/usb/xhcid/: Cargo.toml
edk2/PlumOS/: PlumLoader.efi  Triple.cpp  Triple.h
edk2/PlumOSPkg/: PlumOS.dsc  PlumOS.inf
edk2/PlumOSPkg/PlumOS/: main.c
game/j/Labyrinth of Science_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config
graphics/Pireon/: CMakeLists.txt
graphics/Pireon/include/plum/core/: pireon.h  pireon_core.h  pireon_enums.h  pireon_icd.h  pireon_plumpane.h  pireon_shader_format.h  pireon_types.h  pr_platform.h
graphics/Pireon/src/core/: pireon_device.c  pireon_instance.c  pireon_stub.c
graphics/Pireon/src/loader/: pireon_loader.c
graphics/PlumUI/: CMakeLists.txt  plum_ui.txt
graphics/PlumUI/examples/demo_selector/: demo_selector.c
graphics/PlumUI/src/: plumui.h
graphics/PlumUI/src/core/: plum.c  plum.h  plumallocator.c  plumallocator.h  plumbuffer.c  plumbuffer.h
graphics/PlumUI/src/pdk/: pdk.h  pdkdisplay.c  pdkdisplay.h  pdktypes.h
graphics/PlumUI/src/psk/: psk.h  pskrenderer.c
graphics/PlumUI/src/render/: rhi.c  rhi.h  rhi_registry.c
include/: plam_format.h
kernel/: Cargo.toml  Makefile
kernel/.cargo/: config.toml
kernel/arch/aarch64/boot/: aarch64-plumos.json  boot.S
kernel/arch/x86_64/boot/: boot.asm
kernel/include/: plam_format copy.h  plam_format.h  pom_format.h
kernel/pmhk/: .gitignore  Cargo.toml
kernel/pmhk/.cargo/: config.toml
kernel/pmhk/linkers/: aarch64.ld  riscv64.ld  x86_64.ld
kernel/pmhk/src/: config.rs  devicetree.rs  kernel_alloc.rs  main.rs  mem.rs  types.rs
kernel/pmhk/src/arch/: mod.rs
kernel/pmhk/src/arch/aarch64/: boot.rs  mod.rs
kernel/pmhk/src/init/: mod.rs
kernel/pmhk/src/ipc/: mod.rs
kernel/pmhk/src/modules/: mod.rs
kernel/pmhk/src/scheduler/: mod.rs
kernel/pmhk/src/security/: mod.rs
kernel/pmhk/src/sync/: guarded.rs  mod.rs  spinlock.rs
kernel/pmhk/src/syscall/: memory.rs  mod.rs
kernel/pmhk/src/vfs/: mod.rs
kernel/pmhk/src/vm/: mod.rs
kernel/pmhk/targets/: riscv64-unknown-kernel.json  x86_64-unknown-kernel.json
kernel/pmm/: Cargo.toml
kernel/pmm/src/: lib.rs  types.rs
kernel/pmm/src/allocator/: buddy.rs  mod.rs  slab.rs
kernel/pmm/src/arch/: mod.rs
kernel/src/: main.rs
libpsc/libp/include/plum/: alloc.h
libpsc/libp/src/alloc/: region.c
libpsc/libpc/src/alloc/: malloc.c
libpsc/libpr/src/alloc/: global.rs  region.rs
mk/: config.mk  depends.mk  disk.mk  qemu.mk
plam/loader/: plm_loader.c
plum_bootloader/: Cargo.toml  build.sh
plum_bootloader/crates/plam/: Cargo.toml  build.rs
plum_bootloader/crates/plam/src/: lib.rs
plum_bootloader/include/: plam_header.h
plum_bootloader/src/: main.rs
plum_bootloader/src/arch/: mod.rs
plumboot/arch/x64/: longmode.asm 
plumboot/bootloader/uefi/: main.c
plumboot/include/: efi.h
sdk/lib/plum-formats/src/: plam.rs
sdk/lib/ppm-core/src/: config.rs  error.rs  operations.rs  repository.rs  security.rs
src/: Makefile
src/include/: plm_format.h
src/sys/arm64/conf/: PLUMOS_PC
src/tools/: plm_packer.c
targets/: aarch64-unknown-kernel.json  x86_64-unknown-kernel.json
tools/: Makefile  mkplam  mkplam.rs  plam_packer.c  sign.rs
tools/plum-config/: Cargo.toml
tools/plum-config/src/: main.rs
user/: Makefile
user/servers/ppm-serverd/: Cargo.toml
user/servers/ppm-serverd/src/: ai_scanner.rs  antivirus.rs  main.rs
user/utils/ppm/crates/cli/: Cargo.toml
user/utils/ppm/crates/cli/src/: main.rs
user/utils/psh/: Cargo.toml
user/utils/psh/src/: main.rs  shell.rs  terminal.rs
user/utils/psh/src/builtins/: mod.rs  ppm.rs  system.rs
(+30 files in other folders)
