[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootloader"
path = "src/main.rs"
test = false
bench = false

[dependencies]
spin = "0.10.0"
linked_list_allocator = "0.10.5"
plum-hal = { path = "../sdk/lib/plum-hal" }
plum-formats = { path = "../sdk/lib/plum-formats" }
itoa = { version = "1.0.15", default-features = false }
log = "0.4.28"
uefi = { version = "0.36.1", optional = true }

[build-dependencies]
cc = "1.2.41"

[features]
default = ["minimal"]
minimal = []
full = ["graphics", "network", "secure_boot"]
graphics = []
network = []
secure_boot = []
uefi = ["plum-hal/uefi"]
bios = []
prum64 = []
aarch64 = []
x86_64 = []
riscv64 = []

[package.metadata.bootloader]
default_target = "aarch64-unknown-none"
targets = ["aarch64-unknown-none", "x86_64-unknown-none", "riscv64-unknown-none"]
