[package]
name = "plum_bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.35.0", features = ["logger", "alloc", "global_allocator", "panic_handler"] }
plam = { path = "crates/plam" }
log = { version = "0.4.27", default-features = false }

[build-dependencies]
bindgen = "0.71.1"