[package]
name = "kernel"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
plum-hal = { path = "../../sdk/lib/plum-hal" }
pmm = { path = "../pmm" }
plum-abi = { path = "../../sdk/lib/plum-abi" }
plum-formats = { path = "../../sdk/lib/plum-formats" }
linked_list_allocator = { version = "0.10.5", default-features = false }
spin = "0.10.0"
itoa = { version = "1.0.15", default-features = false }
log = { version = "0.4.28", default-features = false }
compiler_builtins = { version = "0.1.160", features = ["mem"] }

[features]
prum64 = []
aarch64 = []
x86_64 = []
riscv64 = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true

[package.metadata.rustflags]
aarch64-unknown-none = ["-C", "link-arg=-Tlinkers/aarch64.ld"]
riscv64-unknown-none = ["-C", "link-arg=-Tlinkers/riscv64.ld"]
x86_64-unknown-none = ["-C", "link-arg=-Tlinkers/x86_64.ld"]