[package]
name = "ppm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ppm-core = { path = "../../../../../sdk/lib/ppm-core", features = ["cli"] }
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = "0.12.24"
serde_json = "1.0.145"